test/Fail/NotationDoesNotUseAllBinders.agda
-- Andreas, 2014-09-23

syntax bla (λ x → e) = blub e

-- Should trigger error:
-- malformed syntax declaration: syntax must use binding holes exactly once
