test/Fail/NotationDoesNotUseAllBinders.err
NotationDoesNotUseAllBinders.agda:3.29: error: [ParseError]
Malformed syntax declaration: syntax must use binding holes exactly once
